# Lost

./: .gitignore  LICENSE  README.md  _env.sh  app.py  ask.sh  index.sh  other-668f039c9a96d.avif  pyproject.toml  recommend.sh  regenerate.sh  requirements.txt  retrieve.sh  setup.sh  ui.sh
.streamlit/: config.toml
content/: career-tree.md
content/extra/: 2026-career-vision.md  README.md  linkedin-skills-on-the-rise-2026.md  mental-health-2026-adaptive-capacity.md  passions-discovered-or-constructed.md  skills-employers-hiring-2026.md  smartest-career-pivot-2026.md  top-10-skills-to-learn-2026.md  where-do-you-belong-ai-tiers.md
data/: career-tree.json  chunks.jsonl
rag/: __init__.py  ask.py  config.py  cv.py  ingest.py  llm.py  prompt.py  regenerate.py  retrieve.py
tests/: test_ask.py  test_retrieve.py
